--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "4.10.1",
+    "async": "^1.0.0",
+    "express": "4.12.4",
     "morgan": "1.4.1",
-    "opencv": "git+https://github.com/peterbraden/node-opencv.git",
-    "socket.io": "1.2.1"
+    "opencv": "3.0.0",
+    "socket.io": "1.3.2"
   }
 }
