--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,12 @@
   },
   "dependencies": {
     "async": "^1.0.0",
+    "dotenv": "^4.0.0",
     "express": "4.12.4",
+    "fs": "0.0.1-security",
     "morgan": "1.4.1",
-    "opencv": "3.0.0",
+    "nopt": "^4.0.1",
+    "opencv": "git+https://github.com/peterbraden/node-opencv.git",
     "socket.io": "1.3.2"
   }
 }
